[package]
name = "rumqtt-fido-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = ["full"]}
rumqttc = { version = "0.24", features = ["use-rustls"], git = "https://github.com/7ritn/rumqtt.git"}
time = { version = "0.3" }
rustls-pemfile = "2.2.0"
env_logger = "0.11.8"
